force-app/main/default/objects/Asset_Finance_ELS__x/Asset_Finance_ELS__x.object-meta.xml
<CustomObject>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>AssetFinanceELS</externalName>
    <label>Asset Finance ELS</label>
    <pluralLabel>Asset Finances ELS</pluralLabel>
</CustomObject>