force-app/main/default/objects/Asset_Finance_ELS__x/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Account Number</description>
    <externalDeveloperName>AccountNumber</externalDeveloperName>
    <label>Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>