force-app/main/default/objects/Asset_Finance_ELS__x/fields/Amount_In_Arrears__c.field-meta.xml
<CustomField>
    <fullName>Amount_In_Arrears__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Amount In Arrear</description>
    <externalDeveloperName>AmountInArrears</externalDeveloperName>
    <label>Amount In Arrears ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>