force-app/main/default/objects/Asset_Finance_ELS__x/fields/Balloon_Amount__c.field-meta.xml
<CustomField>
    <fullName>Balloon_Amount__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Balloon Amount</description>
    <externalDeveloperName>BalloonAmount</externalDeveloperName>
    <label>Balloon Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>