force-app/main/default/objects/Asset_Finance_ELS__x/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Associated Id Of Customer</description>
    <externalDeveloperName>CustomerId</externalDeveloperName>
    <label>Customer</label>
    <length>255</length>
    <referenceTargetField>Account.External_Id__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Finance (ELS)</relationshipLabel>
    <relationshipName>Asset_Finances_ELS</relationshipName>
    <type>IndirectLookup</type>
</CustomField>