force-app/main/default/objects/Asset_Finance_ELS__x/fields/Expires__c.field-meta.xml
<CustomField>
    <fullName>Expires__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Expires</description>
    <externalDeveloperName>Expires</externalDeveloperName>
    <label>Expiry Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>