force-app/main/default/objects/Asset_Finance_ELS__x/fields/Int_Rate__c.field-meta.xml
<CustomField>
    <fullName>Int_Rate__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Rate % charged to the customer</description>
    <externalDeveloperName>IntRate</externalDeveloperName>
    <label>Interest Rate (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>