force-app/main/default/objects/Asset_Finance_ELS__x/fields/Loan_Term__c.field-meta.xml
<CustomField>
    <fullName>Loan_Term__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Length of the contract term</description>
    <externalDeveloperName>LoanTerm</externalDeveloperName>
    <label>Loan Term (Years)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>