force-app/main/default/objects/Asset_Finance_ELS__x/fields/Total_Number_Of_Repayments__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Of_Repayments__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Number of P&amp; I repayments</description>
    <externalDeveloperName>TotalNumberOfRepayments</externalDeveloperName>
    <label>Repayment Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>